--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-hacker
+title:welcome to the 刘定福's world
+description:Feel free to bookmark this to keep an eye on my project updates
